# Standup-MCP-Server

./: .gitignore  README.md  pyproject.toml
standup_mcp/: __main__.py  cli.py  server.py
