[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "standup-mcp"
version = "0.1.0"
description = "MCP server that logs standups to Notion via natural language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "notion", "standup", "ai", "claude"]
dependencies = [
    "fastmcp>=2.0",
    "notion-client>=2.0",
    "cohere>=5.0",
]

[project.scripts]
standup-mcp = "standup_mcp.cli:main"

[project.urls]
Repository = "https://github.com/Aakash-Pandit/standup-mcp-server"
